[tool.poetry]
name = "rl-assignments"
version = "0.1.0"
description = "Home assignment for IASA students"
authors = ["Andrii Tytarenko"]
readme = "README.md"
packages = [{include = "lib"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.12.0"
tensorboard = "^2.16.2"
torch = "^2.2.1"
tqdm = "^4.66.2"
yacs = "^0.1.8"
matplotlib = "^3.8.3"
gym = "0.15.4"
box2d-py = "2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
